DAS-7765: Fix popover arrow alignment

--- a/src/Map/Map.scss
+++ b/src/Map/Map.scss
@@ -98,4 +98,10 @@
       width: 2.5rem;
     }
   }
+
+  .arrow {
+    &::after, &::before {
+      transform: translateY(-0.325rem);
+    }
+  }
 }
